apps/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  strategy:
    type: Recreate
  nodeSelector:
    pihole: "true"
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
            - name: pihole-pvc
              mountPath: /etc/pihole/
            - name: pihole-pvc
              mountPath: /etc/dnsmasq.d/
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-pihole-secrets
            nodePublishSecretRef:
              name: secrets-store-creds
        - name: pihole-pvc
          persistentVolumeClaim:
            claimName: pihole-pvc
