apps/pi-hole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  type: NodePort
