apps/pi-hole/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pi-hole
  ports:
    - name: http
      port: 80
      targetPort: 80
